more refactor
- add CJ dom-like API for buffering data
- remove CjWriter.stringStart/End
- refactor Jackson POJOs
- started Graphml-CJ conversions, untested by now
- add (unused?) .stream API for JSON
- add better JSON DOM-like API, implement with Jackson